Cluster Fix 2.0 + added all GT ores + added Sifter recipes for gem Clusters + fixed cluster color + added Fluid Extractor for some Clusters + changed Research a bit + added TiCo-Smeltery for GT Clusters, untested

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ version = "1.2.9-GTNH"
 group= "blusunrize"
 archivesBaseName = "WitchingGadgets-1.7.10"
 
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 minecraft {
     version = "1.7.10-10.13.4.1614-1.7.10"
 	replace '${version}', project.version
