Small fixes: +Fixed Pearl recipes not working +deactivated boots of the traveller patch +un-hide WG Clusters +redid primordialArmor a bit +made some recipes more greggy

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ targetCompatibility = 1.8
 
 minecraft {
     version = "1.7.10-10.13.4.1614-1.7.10"
+    replaceIn "WitchingGadgets.java"
 	replace '${version}', project.version
     assetDir = "eclipse/assets"
 }
