--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.2.9i-GTNH"
+version = "1.2.9j-GTNH"
 group= "blusunrize"
 archivesBaseName = "WitchingGadgets-1.7.10"
 
