--- a/build.gradle
+++ b/build.gradle
@@ -39,20 +39,41 @@ jar {
     }
 }
 
+repositories {
+    maven {
+        name = "gt"
+        url = "http://gregtech.overminddl1.com/"
+    }
+    maven { // YAMCore
+        name 'UsrvDE'
+        url "http://jenkins.usrv.eu:8081/nexus/content/repositories/releases/"
+    }
+    maven { // TConstruct
+        name 'DVS1 Maven FS'
+        url 'http://dvs1.progwml6.com/files/maven'
+    }
+}
+
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+    compile "com.azanor.baubles:Baubles:1.7.10-1.0.1.10:deobf"
+    compile "thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev"
 
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    compile "twilightforest:twilightforest:1.7.10-2.3.8dev:dev"
 
+    compile "codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev"
+    compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
+    compile "codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev"
+    compile "eu.usrv:YAMCore:1.7.10+:deobf"
+    compile "net.sengir.forestry:forestry_1.7.10:4.2.16.64:dev"
+    compile "mantle:Mantle:1.7.10+:deobf"
+    compile "mods.railcraft:Railcraft_1.7.10:9.12.3.0:dev"
+
+    compileOnly "codechicken:ForgeMultipart:1.7.10-1.2.0.347:dev"
+    compileOnly "vazkii.botania:Botania:r1.8-250:deobf"
+    compileOnly "minetweaker:MineTweaker3:1.7.10-3.0.10:dev-full"
+
+    compileOnly fileTree("lib/compileOnly")
+    compile fileTree("lib/compile")
 }
 
 processResources
@@ -73,4 +94,8 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+}
+
+sourceSets {
+    main { output.resourcesDir = output.classesDir }
 }
