--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,31 @@
-/.git
-/.gradle
-/.settings
-/asm
-/bin
-/build
-/config
-/crash-reports
-/dumps
-/eclipse
-/journeymap
-/libs
-/logs
-/mods
-/mod-config
-/quantumAnomalies
-/resourcepacks
-/saves
-/scripts
-/screenshots
-/.classpath
-/.project
-/copy
-/git
-/world
-/armourersWorkshop
-/equipmen-database
-out/
+.gradle
+.settings
+/.idea/
+/run/
+/build/
+/eclipse/
+.classpath
+.project
+/bin/
+/config/
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
+/out/
+*.iml
+*.ipr
+*.iws
+src/main/resources/mixins.*.json
 *.bat
-WG.iws
-WG.ipr
-WG.iml
-
-.idea
-run
+*.DS_Store
+!gradlew.bat
