--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,10 +9,11 @@ dependencies {
     compile("curse.maven:travellers-gear-224440:2262113")
     compile("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev")
 
-    compileOnly("com.github.GTNewHorizons:CodeChickenLib:master-SNAPSHOT:dev") {
+    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:NotEnoughItems:master-SNAPSHOT:dev") {
+    runtime("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
+    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:ForgeMultipart:master-SNAPSHOT:dev") {
@@ -21,7 +22,7 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:Botania:master-SNAPSHOT:api") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:CraftTweaker:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:CraftTweaker:3.2.6:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:ZenScript:master-SNAPSHOT") {
