--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,36 +1,21 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:Tainted-Magic:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:ForbiddenMagic:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:twilightforest:master-SNAPSHOT:dev")
+    compile('com.github.GTNewHorizons:Tainted-Magic:8.1.1.1-GTNH:dev')
+    compile('com.github.GTNewHorizons:GT5-Unofficial:5.09.40.34:dev')
+    compile('com.github.GTNewHorizons:ForbiddenMagic:0.6.2-GTNH:dev')
+    compile('com.github.GTNewHorizons:twilightforest:2.3.8.13:dev')
 
-    compile("curse.maven:travellers-gear-224440:2262113")
-    compile("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev")
+    compile('curse.maven:travellers-gear-224440:2262113')
+    compile('thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev')
 
-    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev") {
-        transitive = false
-    }
-    runtime("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
-    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:ForgeMultipart:master-SNAPSHOT:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Botania:master-SNAPSHOT:api") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:CraftTweaker:3.2.6:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:ZenScript:master-SNAPSHOT") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:MagicBees:master-SNAPSHOT:api") {
-        transitive = false
-    }
+    compile('com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev')
+    compile('com.github.GTNewHorizons:NotEnoughItems:2.2.7-GTNH:dev')
+    compileOnly('com.github.GTNewHorizons:ForgeMultipart:1.2.7:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:Botania:1.9.1-GTNH:api') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:CraftTweaker:3.2.6:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:ZenScript:master-SNAPSHOT') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:MagicBees:master-SNAPSHOT:api') {transitive=false}
 
-    runtime("com.github.GTNewHorizons:Baubles:master-SNAPSHOT:dev")
+    runtime('com.github.GTNewHorizons:Baubles:1.0.1.14:dev')
 }
