Workspace Fix for magic bees (#33)
* Removed jitpack.yml due to it now being defuct and updated MagicBees in dependencies.gradle to use  ver. 2.5.15-GTNH

Resolves any build issue that may arrise and will allow for actions such client and script building to actualy run

* Corrected typo; added missing colon in the pathname

* type II revenge of the backspaced letter: (added back the S that was removied; running on fumes here)

* censed (clear) and update the buildscript and made it spotless

**Now Contains the 2 vital files I seem to have thought were not something to be uploaded**

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ dependencies {
 	compileOnly('com.github.GTNewHorizons:Botania:1.9.1-GTNH:api') {transitive=false}
 	compileOnly('com.github.GTNewHorizons:CraftTweaker:3.2.6:dev') {transitive=false}
 	compileOnly('com.github.GTNewHorizons:ZenScript:master-SNAPSHOT') {transitive=false}
-	compileOnly('com.github.GTNewHorizons:MagicBees:master-SNAPSHOT:api') {transitive=false}
+	compileOnly('com.github.GTNewHorizons:MagicBees:2.5.15-GTNH:api') {transitive=false}
 
 	runtime('com.github.GTNewHorizons:Baubles:1.0.1.14:dev')
 }
