--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,21 +1,21 @@
 // Add your dependencies here
 
 dependencies {
-	compile('com.github.GTNewHorizons:Tainted-Magic:7.6.2-GTNH:dev')
-	compile('com.github.GTNewHorizons:GT5-Unofficial:5.09.43.128:dev')
-	compile('com.github.GTNewHorizons:ForbiddenMagic:0.6.7-GTNH:dev')
-	compile('com.github.GTNewHorizons:twilightforest:2.4.3:dev')
+	implementation('com.github.GTNewHorizons:Tainted-Magic:7.6.3-GTNH:dev')
+	implementation('com.github.GTNewHorizons:GT5-Unofficial:5.09.43.171:dev')
+	implementation('com.github.GTNewHorizons:ForbiddenMagic:0.6.7-GTNH:dev')
+	implementation('com.github.GTNewHorizons:twilightforest:2.4.4:dev')
 
-	compile('curse.maven:travellers-gear-224440:2262113')
-	compile('thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev')
+	implementation('curse.maven:travellers-gear-224440:2262113')
+	implementation('thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev')
 
-	compile('com.github.GTNewHorizons:CodeChickenLib:1.1.8:dev')
-	compile('com.github.GTNewHorizons:NotEnoughItems:2.3.73-GTNH:dev')
+	implementation('com.github.GTNewHorizons:CodeChickenLib:1.1.8:dev')
+	implementation('com.github.GTNewHorizons:NotEnoughItems:2.3.81-GTNH:dev')
 	compileOnly('com.github.GTNewHorizons:ForgeMultipart:1.3.4:dev') {transitive=false}
-	compileOnly('com.github.GTNewHorizons:Botania:1.9.23-GTNH:api') {transitive=false}
+	compileOnly('com.github.GTNewHorizons:Botania:1.9.24-GTNH:api') {transitive=false}
 	compileOnly('com.github.GTNewHorizons:CraftTweaker:3.2.13:dev') {transitive=false}
 	compileOnly('com.github.GTNewHorizons:ZenScript:1.0.0-GTNH') {transitive=false}
-	compileOnly('com.github.GTNewHorizons:MagicBees:2.6.4-GTNH:api') {transitive=false}
+	compileOnly('com.github.GTNewHorizons:MagicBees:2.6.6-GTNH:api') {transitive=false}
 
 	runtimeOnly('com.github.GTNewHorizons:Baubles:1.0.1.16:dev')
 }
